
[metadata]
name = ControlBurn
version = 0.0.4
author = Brian Liu
author_email = bl462@cornell.edu
description = A small example package
long_description = file: Feature Selection by Sparse Forests
long_description_content_type = text/markdown
url = https://github.com/brianliu12437/ControlBurnPackage
project_urls =
    Bug Tracker = https://github.com/brianliu12437/ControlBurnPackage/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
